--- a/googlecdfe6eb9ec27cf8a.html
+++ b/googlecdfe6eb9ec27cf8a.html
@@ -1,9 +1,1 @@
-google-site-verification: googlecdfe6eb9ec27cf
-<li>
-  <a href="./Servicios/index.html">Servicios</a>
-</li>
-
-<li>
-  <a href="./Destapa-Cañerias/index.html">Destapa Cañerias</a>
-</li>
-8a.html
+google-site-verification: googlecdfe6eb9ec27cf8a.html
